# checkDK

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RUNNING.md  SECURITY.md  design.md  docker-compose.yml  requirements.md  testing.md
.github/: iam-policy-github-actions.json  pull_request_template.md  trust-policy.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  npm-publish.yml  publish.yml
backend/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  example-docker-compose.yml  pyproject.toml
backend/checkdk/: __init__.py  cli.py  config.py  env.py  models.py
backend/checkdk/ai/: __init__.py  providers.py
backend/checkdk/api/: __init__.py  app.py  client.py
backend/checkdk/api/routes/: analyze.py  auth.py  models.py  monitor.py  predict.py
backend/checkdk/auth/: __init__.py  dependencies.py
backend/checkdk/db/: __init__.py  dynamodb.py
backend/checkdk/executors/: __init__.py  docker_executor.py
backend/checkdk/ml/: __init__.py  predictor.py  train.py
backend/checkdk/parsers/: __init__.py  docker_compose.py  kubernetes_parser.py
backend/checkdk/services/: __init__.py  analysis.py
backend/checkdk/validators/: __init__.py  base.py  compose_validator.py  k8s_validator.py  port_validator.py
backend/test-configs/: docker-compose-chaos.yml  docker-compose-complex.yml  docker-compose.yml  k8s-complex.yml  k8s-deployment.yml
backend/tests/: __init__.py  test_docker_compose_parser.py  test_port_validator.py
cli/: .gitignore  README.md  bootstrap.py  build.sh  checkdk.spec  pyproject.toml  setup.sh
cli/checkdkcli/: __init__.py  __main__.py  client.py  display.py  main.py
cli/checkdkcli/commands/: auth.py  chaos.py  docker.py  init.py  kubectl.py  monitor.py  playground.py  predict.py
frontend/: .env.example  .gitignore  Dockerfile  env.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Features.css  Features.tsx  Footer.css  Footer.tsx  Hero.css  Hero.tsx  Installation.css  Installation.tsx  Navbar.tsx  PrivateRoute.tsx  Usage.css  Usage.tsx
frontend/src/components/dashboard/: Dashboard.tsx  DocsTab.tsx
frontend/src/components/models/: FeatureImportanceChart.tsx  MetricsComparisonChart.tsx  ModelCard.tsx  ModelsTab.tsx  PredictionWidget.tsx
frontend/src/components/playground/: AnalysisResults.tsx  GroqResults.tsx  Playground.tsx
frontend/src/components/ui/: BackgroundGradient.tsx  GSAPTextDecode.tsx  GSAPTypewriter.tsx  HoverBorderGradient.tsx  Meteors.tsx  TextShimmer.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  mockAnalyzer.ts  mockApi.ts
frontend/src/pages/: AppDashboardPage.tsx  AuthCallbackPage.tsx  DemoPage.tsx  DocsPage.tsx  LoginPage.tsx
frontend/src/services/: aiAnalysis.ts  groqAnalysis.ts  modelsApi.ts
ml-models/: Dockerfile  README.md  compare_models.py  docker-compose.yml  requirements.txt  train_all.py
ml-models/api/: app.py  schemas.py
ml-models/datasets/: pod_failure_dataset.csv
ml-models/models/lstm_model/: lstm_model.pt  metrics.json  predict.py  scaler.pkl  train.py
ml-models/models/random_forest/: metrics.json  predict.py  scaler.pkl  train.py
ml-models/models/xgboost_model/: metrics.json  predict.py  train.py  xgb_model.pkl
ml-models/reports/: metrics_summary.txt
npm/@checkdk/cli/: .npmignore  README.md  package.json
npm/@checkdk/cli-darwin-arm64/: README.md  package.json
npm/@checkdk/cli-darwin-x64/: .npmignore  README.md  package.json
npm/@checkdk/cli-linux-arm64/: README.md  package.json
npm/@checkdk/cli-linux-x64/: README.md  package.json
npm/@checkdk/cli-win32-x64/: README.md  package.json
npm/@checkdk/cli/scripts/: postinstall.js
scripts/: update-npm-binaries.sh
