[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkdk"
version = "0.1.0"
description = "AI-powered CLI tool that detects and fixes Docker/Kubernetes issues before execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "checkDK Team"}
]
keywords = ["docker", "kubernetes", "devops", "cli", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
ai = [
    "boto3>=1.28.0",
    "anthropic>=0.18.0",
]
k8s = [
    "kubernetes>=28.0.0",
]

[project.scripts]
checkdk = "checkdk.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/checkdk"
Documentation = "https://github.com/yourusername/checkdk#readme"
Repository = "https://github.com/yourusername/checkdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["checkdk*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=checkdk --cov-report=term-missing"
