[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkdk-cli"
version = "0.2.6"
description = "checkDK CLI – AI-powered Docker/Kubernetes issue detector and pod failure predictor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "checkDK Team", email = "team@checkdk.app"}
]
keywords = ["docker", "kubernetes", "devops", "cli", "ai", "chaos-engineering", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "websocket-client>=1.6.0",
]

[project.urls]
Homepage      = "https://checkdk.app"
Documentation = "https://checkdk.app/docs"
Repository    = "https://github.com/your-org/checkDK_AWS"
"Bug Tracker" = "https://github.com/your-org/checkDK_AWS/issues"
Changelog     = "https://github.com/your-org/checkDK_AWS/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
checkdk = "checkdkcli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["checkdkcli*"]

[tool.black]
line-length = 100
target-version = ['py310']
